--- a/eenergetica.html
+++ b/eenergetica.html
@@ -277,7 +277,7 @@
               <h4>Menu</h4>
               <ul>
                 <li><i class="fa fa-angle-right"></i> <a href="index.html">Home</a></li>
-                <li><i class="fa fa-angle-right"></i> <a href="#speakers-details">Normas electrónicas </a></li>>
+                <li><i class="fa fa-angle-right"></i> <a href="#speakers-details">Normas electrónicas </a></li>
                 </ul>
             </div>
   
